[REFACTOR] create variant design and ui

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "l2b2a5-electronic-gadget-client",
+  "name": "electro-bazaar-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
