--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
     "@reduxjs/toolkit": "^2.1.0",
+    "@vercel/analytics": "^1.3.1",
     "antd": "^5.14.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
