--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@vercel/analytics": "^1.3.1",
     "antd": "^5.14.0",
+    "firebase": "^10.14.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
