--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
